src/test/deca/syntax/invalid/created/faux52.deca
{
	if(true && false == false = true){
		printlnx("qsfsd");
	}
}
